Update for Rider

--- a/ReqnrollTest/ReqnrollTest.csproj
+++ b/ReqnrollTest/ReqnrollTest.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="DataTable.feature" />
+  </ItemGroup>
+
 </Project>
